# ggemini

./: Cargo.toml  README.md
src/: client.rs  gio.rs  lib.rs
src/client/: buffer.rs  certificate.rs  connection.rs  error.rs  response.rs  session.rs  socket.rs
src/client/buffer/: error.rs
src/client/certificate/: error.rs  scope.rs
src/client/certificate/scope/: error.rs
src/client/connection/: certificate.rs  error.rs  input.rs  input_stream.rs  request.rs  response.rs
src/client/connection/input/: error.rs
src/client/connection/input_stream/: byte_buffer.rs
src/client/connection/input_stream/byte_buffer/: error.rs
src/client/connection/request/: error.rs  gemini.rs  mode.rs  titan.rs
src/client/connection/response/: certificate.rs  data.rs  error.rs  failure.rs  input.rs  meta.rs  redirect.rs  success.rs
src/client/connection/response/certificate/: error.rs  not_authorized.rs  not_valid.rs  required.rs
src/client/response/: body.rs  data.rs  error.rs  header.rs  meta.rs
src/client/response/body/: error.rs
src/client/response/data/: text.rs
src/client/response/header/: error.rs  meta.rs  mime.rs  status.rs
src/client/response/meta/: data.rs  error.rs  mime.rs  status.rs
src/client/session/: error.rs
src/client/socket/: connection.rs  error.rs
src/client/socket/connection/: error.rs  input.rs  output.rs
src/gio/: file_output_stream.rs  memory_input_stream.rs  network_address.rs
src/gio/file_output_stream/: error.rs  size.rs
src/gio/memory_input_stream/: error.rs  size.rs
src/gio/network_address/: error.rs
tests/: client.rs  integration.rs
(+45 files in other folders)
