[package]
name = "ggemini"
version = "0.13.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Glib/Gio-oriented network API for Gemini protocol"
keywords = ["gemini", "gemini-protocol", "gtk", "gio", "client"]
categories = ["development-tools", "network-programming", "parsing"]
repository = "https://github.com/YGGverse/ggemini"

[dependencies.gio]
package = "gio"
version = "0.20.4"
features = ["v2_70"]

[dependencies.glib]
package = "glib"
version = "0.20.4"
features = ["v2_66"]
