[package]
name = "ggemini"
version = "0.19.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Glib/Gio-oriented network API for Gemini protocol"
keywords = ["gemini", "titan", "glib", "gio", "client"]
categories = ["development-tools", "network-programming", "parsing"]
repository = "https://github.com/YGGverse/ggemini"

[dependencies.gio]
package = "gio"
version = "0.20.9"
features = ["v2_70"]

[dependencies.glib]
package = "glib"
version = "0.20.9"
features = ["v2_66"]
